<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/Rusername"
        android:layout_width="322dp"
        android:layout_height="67dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Rusername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="322dp"
        android:layout_height="67dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rusername"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="322dp"
        android:layout_height="67dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Rpassword"
        android:layout_width="322dp"
        android:layout_height="67dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerb"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="88dp"
        android:text="@string/register_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>