<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleMapActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="390dp"
        android:layout_height="476dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutbutton" />


    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="203dp"
        android:layout_height="86dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createbutton"
        android:layout_width="203dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_convoy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logoutbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/joinbutton"
        android:layout_width="171dp"
        android:layout_height="74dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="9dp"
        android:text="@string/join_convoy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convoytextview" />

    <Button
        android:id="@+id/leavebutton"
        android:layout_width="168dp"
        android:layout_height="74dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="14dp"
        android:text="@string/leave_convoy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convoytextview" />

    <TextView
        android:id="@+id/convoytextview"
        android:layout_width="271dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_map" />

    <Button
        android:id="@+id/recordbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:text="Record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_map" />


</androidx.constraintlayout.widget.ConstraintLayout>